--- a/app/src/scss/_variables.scss
+++ b/app/src/scss/_variables.scss
@@ -48,62 +48,70 @@ $letter-spacing-1: 0.20000000298023224px;
 $letter-spacing-2: 0.30000001192092896px;
 $letter-spacing-3: 0.5400000214576721px;
 
-$typography-font-size-text-3xs: 10px;
-$typography-font-size-text-2xs: 12px;
-$typography-font-size-text-xs: 13px;
-$typography-font-size-text-sm: 14px;
-$typography-font-size-text-base: 16px;
-$typography-font-size-text-lg: 18px;
-$typography-font-size-text-xl: 20px;
-$typography-font-size-text-2xl: 22px;
-$typography-font-size-text-3xl: 24px;
-$typography-font-size-text-4xl: 26px;
-$typography-font-size-text-5xl: 28px;
-$typography-font-size-text-6xl: 32px;
-$typography-font-size-text-7xl: 40px;
-$typography-font-size-text-8xl: 44px;
-$typography-font-size-text-9xl: 56px;
-$typography-font-size-text-10xl: 72px;
-$typography-font-size-text-11xl: 96px;
+//font-weight
+$font-weight-bold: Bold;
+$font-weight-italic: Italic;
+$font-weight-light: Light;
+$font-weight-medium: Medium;
+$font-weight-regular: Regular;
+$font-weight-semibold: Semibold;
 
-$units-unit-0: 0px;
-$units-unit-1: 1px;
-$units-unit-2: 2px;
-$units-unit-4: 4px;
-$units-unit-6: 6px;
-$units-unit-8: 8px;
-$units-unit-10: 10px;
-$units-unit-12: 12px;
-$units-unit-14: 14px;
-$units-unit-16: 16px;
-$units-unit-18: 18px;
-$units-unit-20: 20px;
-$units-unit-24: 24px;
-$units-unit-28: 28px;
-$units-unit-32: 32px;
-$units-unit-36: 36px;
-$units-unit-40: 40px;
-$units-unit-44: 44px;
-$units-unit-48: 48px;
-$units-unit-56: 56px;
-$units-unit-64: 64px;
-$units-unit-72: 72px;
-$units-unit-80: 80px;
-$units-unit-88: 88px;
-$units-unit-96: 96px;
-$units-unit-112: 112px;
-$units-unit-128: 128px;
-$units-unit-144: 144px;
-$units-unit-160: 160px;
-$units-unit-176: 176px;
-$units-unit-192: 192px;
-$units-unit-208: 208px;
-$units-unit-224: 224px;
-$units-unit-240: 240px;
-$units-unit-256: 256px;
-$units-unit-288: 288px;
-$units-unit-320: 320px;
-$units-unit-384: 384px;
+$font-size-text-3xs: 10px;
+$font-size-text-2xs: 12px;
+$font-size-text-xs: 13px;
+$font-size-text-sm: 14px;
+$font-size-text-base: 16px;
+$font-size-text-lg: 18px;
+$font-size-text-xl: 20px;
+$font-size-text-2xl: 22px;
+$font-size-text-3xl: 24px;
+$font-size-text-4xl: 26px;
+$font-size-text-5xl: 28px;
+$font-size-text-6xl: 32px;
+$font-size-text-7xl: 40px;
+$font-size-text-8xl: 44px;
+$font-size-text-9xl: 56px;
+$font-size-text-10xl: 72px;
+$font-size-text-11xl: 96px;
+
+$unit-0: 0px;
+$unit-1: 1px;
+$unit-2: 2px;
+$unit-4: 4px;
+$unit-6: 6px;
+$unit-8: 8px;
+$unit-10: 10px;
+$unit-12: 12px;
+$unit-14: 14px;
+$unit-16: 16px;
+$unit-18: 18px;
+$unit-20: 20px;
+$unit-24: 24px;
+$unit-28: 28px;
+$unit-32: 32px;
+$unit-36: 36px;
+$unit-40: 40px;
+$unit-44: 44px;
+$unit-48: 48px;
+$unit-56: 56px;
+$unit-64: 64px;
+$unit-72: 72px;
+$unit-80: 80px;
+$unit-88: 88px;
+$unit-96: 96px;
+$unit-112: 112px;
+$unit-128: 128px;
+$unit-144: 144px;
+$unit-160: 160px;
+$unit-176: 176px;
+$unit-192: 192px;
+$unit-208: 208px;
+$unit-224: 224px;
+$unit-240: 240px;
+$unit-256: 256px;
+$unit-288: 288px;
+$unit-320: 320px;
+$unit-384: 384px;
 
 //duration
 $duration-1-x: 0.1s;
@@ -120,3 +128,11 @@ $icon-md: 24px;
 $icon-lg: 32px;
 $icon-xl: 48px;
 $icon-2xl: 64px;
+
+//avatar
+$avatar-size-xs: 24px;
+$avatar-size-sm: 32px;
+$avatar-size-md: 40px;
+$avatar-size-lg: 56px;
+$avatar-size-xl: 72px;
+$avatar-size-2xl: 96px;
