--- a/app/src/scss/abstracts/_variables.scss
+++ b/app/src/scss/abstracts/_variables.scss
@@ -49,12 +49,12 @@ $letter-spacing-2: 0.30000001192092896px;
 $letter-spacing-3: 0.5400000214576721px;
 
 //font-weight
-$font-weight-bold: Bold;
-$font-weight-italic: Italic;
-$font-weight-light: Light;
-$font-weight-medium: Medium;
-$font-weight-regular: Regular;
-$font-weight-semibold: Semibold;
+$font-weight-bold: 700;
+$font-weight-italic: italic;
+$font-weight-light: 300;
+$font-weight-medium: 500;
+$font-weight-regular: 400;
+$font-weight-semibold: 600;
 
 $font-size-text-3xs: 10px;
 $font-size-text-2xs: 12px;
