--- a/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
+++ b/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
@@ -4,4 +4,22 @@
   background-color: lighten($base-lightest, 4%);
   border: $base-lighter $border-width-sm solid;
   padding: $space-200;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: $space-200;
+  column-gap: $space-300;
+
+  @include breakpoint(mobile) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  @include breakpoint(tablet) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include breakpoint(desktop) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  &__col {
+    background-color: transparent;
+  }
 }
