--- a/app/src/scss/abstracts/_variables.scss
+++ b/app/src/scss/abstracts/_variables.scss
@@ -39,6 +39,23 @@ $space-700: 56px;
 $space-800: 64px;
 $space-900: 72px;
 
+//negative spacing
+$neg-space-025: -2px;
+$neg-space-050: -4px;
+$neg-space-075: -6px;
+$neg-space-100: -8px;
+$neg-space-125: -10px;
+$neg-space-150: -12px;
+$neg-space-200: -16px;
+$neg-space-250: -20px;
+$neg-space-300: -24px;
+$neg-space-400: -32px;
+$neg-space-500: -40px;
+$neg-space-600: -48px;
+$neg-space-700: -56px;
+$neg-space-800: -64px;
+$neg-space-900: -72px;
+
 //letter spacing
 $letter-spacing-neg-3: -0.5400000214576721px;
 $letter-spacing-neg-2: -0.30000001192092896px;
