--- a/app/src/components/CaseExpandContent/CaseExpandContent.scss
+++ b/app/src/components/CaseExpandContent/CaseExpandContent.scss
@@ -3,9 +3,9 @@
 .case-expand-content {
   border: $border-width-sm $base-lighter solid;
   border-top: 0;
-
   background-color: $base-lightest;
   padding: 0 4px 4px 4px;
+  margin-top: -1px;
 
   &__content {
     background-color: $white;
