--- a/app/src/components/CaseExpandContent/CaseExpandContent.scss
+++ b/app/src/components/CaseExpandContent/CaseExpandContent.scss
@@ -7,7 +7,7 @@
   padding: 0 4px 4px 4px;
   margin-top: -1px;
 
-  &__content {
+  &__content-region {
     background-color: $white;
     padding: $space-300;
   }
