--- a/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
+++ b/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
@@ -1,4 +1,5 @@
 @import "../../scss/abstracts/variables";
+@import "../../scss/abstracts/mixins";
 
 .case-review-overview {
   background-color: lighten($base-lightest, 4%);
