--- a/app/src/components/Layout/AppHeader/AppHeader.scss
+++ b/app/src/components/Layout/AppHeader/AppHeader.scss
@@ -1,4 +1,5 @@
 @import "../../../scss/abstracts/variables";
+@import "../../../scss/abstracts/mixins";
 
 .app-header {
   background-color: $white;
