--- a/app/src/scss/abstracts/_mixins.scss
+++ b/app/src/scss/abstracts/_mixins.scss
@@ -3,3 +3,43 @@
   white-space: nowrap;
   text-overflow: $overflow; // values are: clip, ellipsis, or a string
 }
+
+@mixin breakpoint($point) {
+  @if $point == card {
+    @media (min-width: $breakpoint-card) {
+      @content;
+    }
+  } @else if $point == card-lg {
+    @media (min-width: $breakpoint-card-lg) {
+      @content;
+    }
+  } @else if $point == mobile {
+    @media (min-width: $breakpoint-mobile) {
+      @content;
+    }
+  } @else if $point == mobile-lg {
+    @media (min-width: $breakpoint-mobile-lg) {
+      @content;
+    }
+  } @else if $point == tablet {
+    @media (min-width: $breakpoint-tablet) {
+      @content;
+    }
+  } @else if $point == tablet-lg {
+    @media (min-width: $breakpoint-tablet-lg) {
+      @content;
+    }
+  } @else if $point == desktop {
+    @media (min-width: $breakpoint-desktop) {
+      @content;
+    }
+  } @else if $point == desktop-lg {
+    @media (min-width: $breakpoint-desktop-lg) {
+      @content;
+    }
+  } @else if $point == widescreen {
+    @media (min-width: $breakpoint-widescreen) {
+      @content;
+    }
+  }
+}
