--- a/app/src/components/CaseExpandSectionHeader/CaseExpandSectionHeader.scss
+++ b/app/src/components/CaseExpandSectionHeader/CaseExpandSectionHeader.scss
@@ -3,7 +3,7 @@
 .case-expand-section-header {
   background-color: lighten($primary-lighter, 5%);
   padding: $space-200 $space-300;
-  margin: $neg-space-300 $neg-space-300 $space-300 $neg-space-300;
+  margin: $space-300 $neg-space-300 $space-300 $neg-space-300;
   border: $white $border-width-sm solid;
   color: $primary;
   display: flex;
@@ -14,5 +14,9 @@
     font-size: $font-size-text-base;
     font-weight: $font-weight-semibold;
     flex: 1;
+  }
+
+  &:first-of-type {
+    margin: $neg-space-300 $neg-space-300 $space-300 $neg-space-300;
   }
 }
