--- a/app/src/scss/abstracts/_variables.scss
+++ b/app/src/scss/abstracts/_variables.scss
@@ -77,7 +77,7 @@ $font-size-text-3xs: 10px;
 $font-size-text-2xs: 12px;
 $font-size-text-xs: 13px;
 $font-size-text-sm: 14px;
-$font-size-text-base: 16px;
+$font-size-text-base: 1.06rem;
 $font-size-text-lg: 18px;
 $font-size-text-xl: 20px;
 $font-size-text-2xl: 22px;
