--- a/app/src/scss/abstracts/_variables.scss
+++ b/app/src/scss/abstracts/_variables.scss
@@ -73,23 +73,16 @@ $font-weight-medium: 500;
 $font-weight-regular: 400;
 $font-weight-semibold: 600;
 
-$font-size-text-3xs: 10px;
-$font-size-text-2xs: 12px;
-$font-size-text-xs: 13px;
-$font-size-text-sm: 14px;
+$font-size-text-3xs: 0.87rem;
+$font-size-text-2xs: 0.93rem;
+$font-size-text-xs: 0.9rem;
+$font-size-text-sm: 1rem;
 $font-size-text-base: 1.06rem;
-$font-size-text-lg: 18px;
-$font-size-text-xl: 20px;
-$font-size-text-2xl: 22px;
-$font-size-text-3xl: 24px;
-$font-size-text-4xl: 26px;
-$font-size-text-5xl: 28px;
-$font-size-text-6xl: 32px;
-$font-size-text-7xl: 40px;
-$font-size-text-8xl: 44px;
-$font-size-text-9xl: 56px;
-$font-size-text-10xl: 72px;
-$font-size-text-11xl: 96px;
+$font-size-text-md: 1.13rem;
+$font-size-text-lg: 1.46rem;
+$font-size-text-xl: 2.13rem;
+$font-size-text-2xl: 2.66rem;
+$font-size-text-3xl: 3.19rem;
 
 $unit-0: 0px;
 $unit-1: 1px;
