--- a/app/src/components/AppPanel/AppPanel.scss
+++ b/app/src/components/AppPanel/AppPanel.scss
@@ -4,4 +4,5 @@
   background-color: $white;
   padding: $space-400;
   border-radius: $border-radius-md;
+  box-shadow: 0px 1px 2px $alpha-black-10;
 }
