--- a/app/src/components/CaseFieldInfoBlock/CaseFieldInfoBlock.scss
+++ b/app/src/components/CaseFieldInfoBlock/CaseFieldInfoBlock.scss
@@ -8,10 +8,10 @@
 
   &__label {
     font-weight: $font-weight-semibold;
-    font-size: $font-size-text-base;
+    font-size: $font-size-text-sm;
   }
   &__value {
     font-weight: $font-weight-regular;
-    font-size: $font-size-text-base;
+    font-size: $font-size-text-sm;
   }
 }
