--- a/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
+++ b/app/src/components/CaseReviewOverview/CaseReviewOverview.scss
@@ -28,10 +28,10 @@
   }
   &__info-label {
     font-weight: $font-weight-semibold;
-    font-size: $font-size-text-base;
+    font-size: $font-size-text-sm;
   }
   &__info-value {
     font-weight: $font-weight-regular;
-    font-size: $font-size-text-base;
+    font-size: $font-size-text-sm;
   }
 }
